// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileIcon Component Snapshot Tests matches snapshot with custom size and percentage 1`] = `
<svg
  height="80"
  viewBox="0 0 80 80"
  width="80"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="40"
    cy="40"
    fill="none"
    opacity="0.2"
    r="35"
    stroke="currentColor"
    stroke-width="6"
  />
  <circle
    cx="40"
    cy="40"
    fill="none"
    r="35"
    stroke="currentColor"
    stroke-dasharray="219.9114857512855"
    stroke-dashoffset="54.97787143782136"
    stroke-linecap="round"
    stroke-width="6"
    style="transition: stroke-dashoffset 0.3s ease;"
    transform="rotate(-90 40 40)"
  />
  <circle
    cx="40"
    cy="40"
    fill="currentColor"
    r="30"
  />
</svg>
`;

exports[`ProfileIcon Component Snapshot Tests matches snapshot with default props 1`] = `
<svg
  height="40"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="20"
    cy="20"
    fill="none"
    opacity="0.2"
    r="15"
    stroke="currentColor"
    stroke-width="6"
  />
  <circle
    cx="20"
    cy="20"
    fill="none"
    r="15"
    stroke="currentColor"
    stroke-dasharray="94.24777960769379"
    stroke-dashoffset="94.24777960769379"
    stroke-linecap="round"
    stroke-width="6"
    style="transition: stroke-dashoffset 0.3s ease;"
    transform="rotate(-90 20 20)"
  />
  <circle
    cx="20"
    cy="20"
    fill="currentColor"
    r="10"
  />
</svg>
`;
